templates/sequencer_relayer_stack_prepull.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sequencer-relayer-stack-prepuller
spec:
  selector:
    matchLabels:
      name: sequencer-relayer-stack-prepuller
  template:
    metadata:
      labels:
        name: sequencer-relayer-stack-prepuller
    spec:
      containers:
        - name: pause
          image: gcr.io/google_containers/pause
---
