templates/sequencer_relayer_stack.yaml-1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-04-03T10:34:40Z"
  name: sequencer-relayer-stack-1
  labels:
    app: sequencer-relayer-stack-1-app
spec:
  # securityContext:
  #   runAsUser: 10001
  containers:
    - name: celestia-app
      command: ["/scripts/start-celestia-appd-podman.sh"]
      image: "ghcr.io/astriaorg/celestia-app:v0.11.0"
      volumeMounts:
      - mountPath: /scripts/
        name: scripts-volume
        readOnly: true
      - mountPath: /home/celestia
        name: celestia-home
    - name: celestia-bridge
      command:
      - /scripts/start-bridge-podman.sh
      image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
      volumeMounts:
        - mountPath: /scripts/
          name: scripts-volume
          readOnly: true
        - mountPath: /home/celestia
          name: celestia-home
      ports:
        - containerPort: 26659
          name: bridge-svc
    - name: metro-sequencer
      command: ["/scripts/start-metro-podman.sh"]
      image: "ghcr.io/astriaorg/metro:0.0.2"
      ports:
        - containerPort: 1318
      volumeMounts:
        - mountPath: /scripts/
          name: scripts-volume
          readOnly: true
        - mountPath: /home/metro
          name: metro-home
  restartPolicy: OnFailure
  volumes:
  - hostPath:
      path: /scripts
      type: Directory
    name: scripts-volume
  - emptyDir: {}
    name: celestia-home
  - emptyDir: {}
    name: metro-home
---
kind: Service
apiVersion: v1
metadata:
  name: sequencer-relayer-stack-1-service
spec: 
  selector:
    app: sequencer-relayer-stack-1-app
  ports:
    - name: sequencer-svc
      port: 1318
    # - name: bridge-svc
      # port: 26659
      # targetPort: bridge-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sequencer-relayer-1-ingress
spec:
  rules: 
  - http:
      paths:
        - pathType: Prefix
          path: "/sequencer"
          backend:
            service:
              name: sequencer-relayer-stack-1-service
              port:
                number: 1318
        # - pathType: Prefix
          # path: "/bridge"
          # backend:
            # service:
              # name: sequencer-relayer-stack-1-service
              # port:
                # number: 26659
---
