templates/sequencer_relayer_stack_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sequencer-relayer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # defaultBackend:
  #   service:
  #     name: http-svc
  #     port:
  #       number: 80
  rules: 
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: http-svc
              port:
                number: 80
---
